k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: educorenextgen-website-service
  namespace: educorenextgen
  labels:
    app: educorenextgen-website
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: educorenextgen-website
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
